--- a/Project 2/Sung-Lee-Project2.Rmd
+++ b/Project 2/Sung-Lee-Project2.Rmd
@@ -360,20 +360,13 @@ ggplot(coronaCSV, aes(x = country, y = recovered, fill = country)) +
     theme_classic()
 ```
 
-
-# Quarterly Results {.tabset}
- Phasellus viverra turpis lacinia sem auctor, ut porta augue feugiat. Sed maximus erat non finibus fringilla. Integer id magna at sapien luctus pulvinar. Curabitur posuere facilisis tellus in pretium. Praesent in purus nunc. Etiam elementum, massa ac hendrerit rutrum, nibh eros varius libero, ut molestie urna dolor sit amet urna. Sed volutpat ligula urna, in suscipit orci consequat ac. Phasellus luctus placerat molestie.
-
-
-## By Product
-
-Fusce venenatis arcu at risus scelerisque, eget viverra massa aliquet. Nam eu gravida enim. Donec et fringilla tortor, vehicula viverra nulla. Donec molestie, sapien at bibendum sollicitudin, odio nisl faucibus augue, ut elementum ante eros sit amet turpis. Nulla sit amet accumsan magna, non fringilla ipsum. In cursus augue tincidunt nunc fringilla venenatis. Aliquam in lobortis tortor. Proin enim lorem, tempor ut elementum id, tempus sit amet dui. Aliquam pulvinar urna ut nibh pharetra consequat. Suspendisse sed dui ligula. Aliquam eget lacinia tortor. Phasellus leo magna, accumsan eu felis a, gravida dapibus urna. In molestie eleifend lobortis. Ut sed nulla semper, consequat libero ut, fermentum ipsum. 
+# Academic Advising Data
+Gehad Gad provided a data set for tidying related to academic advising. Below is a screenshot of the data.
 
 
-## By Region
+![](https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%202/Advising.png)
 
- Phasellus viverra turpis lacinia sem auctor, ut porta augue feugiat. Sed maximus erat non finibus fringilla. Integer id magna at sapien luctus pulvinar. Curabitur posuere facilisis tellus in pretium. Praesent in purus nunc. Etiam elementum, massa ac hendrerit rutrum, nibh eros varius libero, ut molestie urna dolor sit amet urna. Sed volutpat ligula urna, in suscipit orci consequat ac. Phasellus luctus placerat molestie. 
-
+I converted the screenshot to a csv. 
 
 
 # Conclusion
