--- a/Project 2/Sung-Lee-Project2.Rmd
+++ b/Project 2/Sung-Lee-Project2.Rmd
@@ -419,20 +419,6 @@ Here is a breakdown of the data.
 
 ### Advisor Rank
 
-```{r}
-advisors <- unique(academicCSV$Advisor)
-
-temp <- filter(academicCSV, Advisor == "Maria")
-summary(temp)
-for (advisor in advisors){
-
-#    temp <- filter(academicCSV, Advisor == stringMatch)
-#    summary(temp)
-}
-
-
-```
-
 
 ```{r}
 ggplot(academicCSV, aes(x = Month, y = Rank, group = Advisor, color = Advisor)) +
@@ -462,6 +448,4 @@ ggplot(meanMajor, aes(x = Month, y = Average, group = Major, color = Major)) +
 
 
 # Conclusion
-
-Fusce venenatis arcu at risus scelerisque, eget viverra massa aliquet. Nam eu gravida enim. Donec et fringilla tortor, vehicula viverra nulla. Donec molestie, sapien at bibendum sollicitudin, odio nisl faucibus augue, ut elementum ante eros sit amet turpis. Nulla sit amet accumsan magna, non fringilla ipsum. In cursus augue tincidunt nunc fringilla venenatis. Aliquam in lobortis tortor. Proin enim lorem, tempor ut elementum id, tempus sit amet dui. Aliquam pulvinar urna ut nibh pharetra consequat. Suspendisse sed dui ligula. Aliquam eget lacinia tortor. Phasellus leo magna, accumsan eu felis a, gravida dapibus urna. In molestie eleifend lobortis. Ut sed nulla semper, consequat libero ut, fermentum ipsum. 
-
+R has many libraries that can help to wrangle, tidy, dice, and prepare data for analysis. Now, I have to endeavor in how to properly display the data analysis.
