--- a/project3/Project 3.Rmd
+++ b/project3/Project 3.Rmd
@@ -96,10 +96,9 @@ Initial problems and solutions:
 
 When the data was imported into Microsoft's cloud service, we ran some initial tests on the data to look for patterns. Using Microsoft's Text Analytics tools the following is a word cloud of the keyphrases that were discovered by Microsoft's AI:
 
+![Word Cloud Courtesy of Azure](https://github.com/logicalschema/DATA607/raw/master/project3/images/powerbi_wordcloud.png)
 
-
-
-
+The keyphrases were stored on the database.
 
 
 
